--- a/Atividades/Mixed Letters FIXO/index.html
+++ b/Atividades/Mixed Letters FIXO/index.html
@@ -424,7 +424,7 @@ if (!window.speechSynthesis.onvoiceschanged) {
     }
 
     // Função para atualizar o progresso no banco de dados
-   async function updateNextPhase(userId) {
+  async function updateNextPhase(userId) {
     console.log("Updating next phase...");
     const currentPhase = getPhaseFromURL();
     const { level, unit } = getLevelAndUnitFromURL();
@@ -435,11 +435,11 @@ if (!window.speechSynthesis.onvoiceschanged) {
             const nextUnit = `Unit${parseInt(unit.replace('Unit', '')) + 1}`;
             await firebase.database().ref(`usuarios/${userId}/progresso/${level}/${nextUnit}`).set({ fase1: true });
         } else if (currentPhase === "end") {
-          const nextLevel = `Level${parseInt(level.replace('Level', '')) + 1}`;
-            await firebase.database().ref(usuarios/${userId}/progresso/${nextLevel}/Unit1).set({ fase1: true });
+            const nextLevel = `Level${parseInt(level.replace('Level', '')) + 1}`;
+            await firebase.database().ref(`usuarios/${userId}/progresso/${nextLevel}/Unit1`).set({ fase1: true });
         } else {
             const nextPhase = parseInt(currentPhase) + 1;
-            await dbRef.update({ [`fase${currentPhase}`]: true, [`fase${nextPhase}`]: true });
+            await dbRef.update({ [`fase${currentPhase}`]: true, [`fase${nextPhase}`]: true }); // Correção aqui
         }
     } catch (error) {
         console.error("Erro ao atualizar o progresso da fase:", error);
