--- a/Atividades/Mixed Letters FIXO/index - Copy.html
+++ b/Atividades/Mixed Letters FIXO/index - Copy.html
@@ -197,56 +197,65 @@
     firebase.initializeApp(firebaseConfig);
 
 document.getElementById('backButton').addEventListener('click', async function () {
+    console.log("Botão 'Back' pressionado.");
+
     const { level, unit } = getLevelAndUnitFromURL();
     const currentPhase = parseInt(getPhaseFromURL());
     const nextPhase = currentPhase + 1;
 
-    // Referência ao progresso no Firebase
     const user = firebase.auth().currentUser;
     if (!user) {
-        alert("You must be logged in to perform this action.");
+        console.error("Usuário não autenticado.");
+        alert("Você deve estar logado para realizar esta ação.");
         return;
     }
 
     const userId = user.uid;
-    const progressRef = firebase.database().ref(usuarios/${userId}/progresso/${level}/${unit}/fase${nextPhase});
+    const progressRef = firebase.database().ref(`usuarios/${userId}/progresso/${level}/${unit}/fase${nextPhase}`);
 
     try {
-        // Verifica se a próxima fase está desbloqueada
         const snapshot = await progressRef.once('value');
         const isUnlocked = snapshot.val();
+        console.log("Próxima fase desbloqueada:", isUnlocked);
 
         if (isUnlocked) {
-            history.back(); // Navega para a página anterior
+            history.back();
         } else {
-            // Mostra mensagem de confirmação se a próxima fase não estiver desbloqueada
-            const confirmMessage = "The next phase is locked. Are you sure you want to leave this page?";
+            console.warn("A próxima fase está bloqueada.");
+            const confirmMessage = "A próxima fase está bloqueada. Tem certeza de que deseja sair desta página?";
             if (confirm(confirmMessage)) {
-                history.back(); // Navega para a página anterior mesmo assim
+                history.back();
             }
         }
     } catch (error) {
-        console.error("Error checking phase progress:", error);
-        alert("An error occurred while checking the next phase progress.");
+        console.error("Erro ao verificar o progresso da fase:", error);
+        alert("Ocorreu um erro ao verificar o progresso.");
     }
 });
 
 firebase.auth().onAuthStateChanged((user) => {
     if (user) {
+        console.log("Usuário autenticado com sucesso:", user.uid);
+
         const userId = user.uid;
-        const userRoleRef = firebase.database().ref(usuarios/${userId}/role);
+        const userRoleRef = firebase.database().ref(`usuarios/${userId}/role`);
 
         userRoleRef.once('value').then((snapshot) => {
             const role = snapshot.val();
+            console.log("Role do usuário recuperado:", role);
+
             // Exibe o botão apenas se o role for "professor" ou "proprietário"
             if (role === 'professor' || role === 'proprietário') {
                 document.getElementById("pdfButton").style.display = "inline-block";
+                console.log("Botão PDF exibido para o usuário.");
+            } else {
+                console.log("Usuário não é 'professor' ou 'proprietário'. Botão PDF oculto.");
             }
         }).catch((error) => {
-            console.error("Erro ao buscar o role do usuário:", error);
+            console.error("Erro ao buscar o role do usuário no Firebase:", error);
         });
     } else {
-        console.log("Nenhum usuário autenticado.");
+        console.warn("Nenhum usuário autenticado. Certifique-se de que o login foi realizado.");
     }
 });
 
@@ -299,7 +308,7 @@ async function generatePDF() {
                 if (mixedLettersElement) {
                     const mixedLetters = Array.from(mixedLettersElement.children).map(el => el.innerText).join(' ');
                     yOffset += 10;
-                    doc.text(Letters (mixed): ${mixedLetters}, 50, yOffset + 10);
+                    doc.text(`Letters (mixed): ${mixedLetters}`, 50, yOffset + 10);
                 }
 
                 yOffset += 40;
@@ -369,16 +378,19 @@ function initializeVoices() {
     const synth = window.speechSynthesis;
     const voices = synth.getVoices();
 
-    selectedVoice = voices.find(voice => voice.lang === "en-US");
+    console.log("Vozes disponíveis no navegador:", voices);
 
+    selectedVoice = voices.find(voice => voice.lang === "en-US");
+    
     if (!selectedVoice) {
         if (!alertDisplayed) {
-            alert("No 'en-US' voice found. Using default voice instead.");
+            alert("Nenhuma voz 'en-US' encontrada. Usando a primeira voz disponível.");
             alertDisplayed = true;
         }
-        selectedVoice = voices[0]; // Usa a primeira voz disponível como fallback
+        selectedVoice = voices[0]; // Fallback para a primeira voz
     }
 
+    // Loga qual voz foi selecionada (en-US ou fallback)
     console.log("Selected voice:", selectedVoice ? selectedVoice.name : "Default voice");
 }
 
@@ -412,22 +424,22 @@ if (!window.speechSynthesis.onvoiceschanged) {
     }
 
     // Função para atualizar o progresso no banco de dados
-   async function updateNextPhase(userId) {
+  async function updateNextPhase(userId) {
     console.log("Updating next phase...");
     const currentPhase = getPhaseFromURL();
     const { level, unit } = getLevelAndUnitFromURL();
-    const dbRef = firebase.database().ref(usuarios/${userId}/progresso/${level}/${unit});
+    const dbRef = firebase.database().ref(`usuarios/${userId}/progresso/${level}/${unit}`);
 
     try {
         if (currentPhase === "last") {
-            const nextUnit = Unit${parseInt(unit.replace('Unit', '')) + 1};
-            await firebase.database().ref(usuarios/${userId}/progresso/${level}/${nextUnit}).set({ fase1: true });
+            const nextUnit = `Unit${parseInt(unit.replace('Unit', '')) + 1}`;
+            await firebase.database().ref(`usuarios/${userId}/progresso/${level}/${nextUnit}`).set({ fase1: true });
         } else if (currentPhase === "end") {
-            const nextLevel = Level${parseInt(level.replace('Level', '')) + 1};
-            await firebase.database().ref(usuarios/${userId}/progresso/${nextLevel}/Unit1).set({ fase1: true });
+            const nextLevel = `Level${parseInt(level.replace('Level', '')) + 1}`;
+            await firebase.database().ref(`usuarios/${userId}/progresso/${nextLevel}/Unit1`).set({ fase1: true });
         } else {
             const nextPhase = parseInt(currentPhase) + 1;
-            await dbRef.update({ [fase${currentPhase}]: true, [fase${nextPhase}]: true });
+            await dbRef.update({ [`fase${currentPhase}`]: true, [`fase${nextPhase}`]: true }); // Correção aqui
         }
     } catch (error) {
         console.error("Erro ao atualizar o progresso da fase:", error);
@@ -435,29 +447,36 @@ if (!window.speechSynthesis.onvoiceschanged) {
 }
 
     // Função para carregar as atividades
- async function loadActivities() {
+async function loadActivities() {
     try {
         const { level, unit } = getLevelAndUnitFromURL();
+        console.log("Level e Unit extraídos da URL:", level, unit);
 
-        const wordsPath = ../../${level}/${unit}/data1/words.txt;
+        const wordsPath = `../../${level}/${unit}/data1/words.txt`;
+        console.log("Caminho para o arquivo de palavras:", wordsPath);
+
         const response = await fetch(wordsPath);
+        if (!response.ok) throw new Error(`Erro ao buscar palavras. Status: ${response.status}`);
         const text = await response.text();
+
         const words = text.trim().split('\n');
+        console.log("Palavras carregadas:", words);
 
         words.forEach((word, index) => {
-            const imageUrl = ../../${level}/${unit}/data1/imagens/imagem${index + 1}.png;
-            activities.push(word); // Adiciona cada palavra ao array activities
+           const imageUrl = `../../${level}/${unit}/data1/imagens/imagem${index + 1}.png`;
+            console.log(`Tentando carregar imagem para a palavra '${word}':`, imageUrl);
+            activities.push(word);
             createActivity(imageUrl, word);
         });
-
-        console.log("Activities Loaded:", activities); // Log para depuração
     } catch (error) {
         console.error('Erro ao carregar palavras ou imagens:', error);
     }
 }
 
     // Função para criar uma atividade
- function createActivity(imageUrl, word) {
+function createActivity(imageUrl, word) {
+    console.log("Criando atividade para a palavra:", word, "com imagem:", imageUrl);
+
     const activityContainer = document.getElementById('activity-container');
     const activityDiv = document.createElement('div');
     activityDiv.classList.add('activity');
@@ -466,8 +485,8 @@ if (!window.speechSynthesis.onvoiceschanged) {
     const imgElement = document.createElement('img');
     imgElement.src = imageUrl;
 
-    imgElement.onerror = function() {
-        console.warn(Erro ao carregar a imagem: ${imageUrl});
+    imgElement.onerror = function () {
+        console.warn(`Erro ao carregar a imagem: ${imageUrl}`);
         imgElement.style.display = 'none'; // Esconde a imagem se não carregar
     };
 
@@ -477,6 +496,7 @@ if (!window.speechSynthesis.onvoiceschanged) {
     wordContainer.classList.add('word-container');
 
     const shuffledWord = shuffleWord(word);
+    console.log("Palavra embaralhada:", shuffledWord);
 
     const mixedLettersElement = document.createElement('div');
     mixedLettersElement.classList.add('mixed-letters');
@@ -495,10 +515,10 @@ if (!window.speechSynthesis.onvoiceschanged) {
         letterInput.classList.add('letter-input');
         letterInput.maxLength = 1;
 
-        letterInput.addEventListener('input', function() {
+        letterInput.addEventListener('input', function () {
             if (letterInput.value.length === 1) {
                 if (index < array.length - 1) {
-                    letterInputs[index + 1].focus(); // Vai para o próximo campo
+                    letterInputs[index + 1].focus(); // Move o foco para o próximo campo
                 } else {
                     letterInput.blur(); // Remove o foco do último campo
                 }
@@ -515,13 +535,17 @@ if (!window.speechSynthesis.onvoiceschanged) {
     checkAnswerBtn.classList.add('check-answer-btn');
     checkAnswerBtn.innerText = 'Check Answer';
 
-    checkAnswerBtn.onclick = function() {
+    checkAnswerBtn.onclick = function () {
         const userAnswer = Array.from(inputContainer.querySelectorAll('.letter-input'))
             .map(input => input.value.toUpperCase())
             .join('');
+        console.log("Resposta do usuário:", userAnswer);
 
         const letterInputs = inputContainer.querySelectorAll('.letter-input');
         if (userAnswer === word.toUpperCase()) {
+            console.log("Resposta correta:", word);
+
+            // Marca inputs como corretos
             letterInputs.forEach(input => {
                 input.classList.add('correct');
                 input.classList.remove('incorrect');
@@ -530,19 +554,22 @@ if (!window.speechSynthesis.onvoiceschanged) {
             // Lê a palavra correta usando o sintetizador de voz
             readText(word);
 
-           if (activityDiv.dataset.completed === "false") {
-    completedWords++;
-    activityDiv.dataset.completed = "true"; // Marca como concluída
-                console.log(User Answer: ${userAnswer}, Correct Answer: ${word});
-                console.log(Completed Words: ${completedWords}/${activities.length});
+            if (activityDiv.dataset.completed === "false") {
+                completedWords++;
+                activityDiv.dataset.completed = "true"; // Marca a atividade como concluída
+                console.log(`Palavras concluídas: ${completedWords}/${activities.length}`);
             }
 
+            // Verifica se todas as atividades foram concluídas
             if (completedWords === activities.length) {
-                console.log("All activities completed!");
+                console.log("Todas as atividades foram concluídas!");
                 showCompletionModal(); // Exibe o modal de conclusão
                 ensureUserIsAuthenticated(updateNextPhase); // Atualiza a próxima fase no Firebase
             }
         } else {
+            console.warn("Resposta incorreta:", userAnswer);
+
+            // Marca inputs como incorretos
             letterInputs.forEach(input => {
                 input.classList.add('incorrect');
                 input.classList.remove('correct');
@@ -551,7 +578,6 @@ if (!window.speechSynthesis.onvoiceschanged) {
     };
 
     wordContainer.appendChild(checkAnswerBtn);
-
     activityDiv.appendChild(wordContainer);
     activityContainer.appendChild(activityDiv);
 }
