--- a/Atividades/Mixed Letters FIXO/index - Copy.html
+++ b/Atividades/Mixed Letters FIXO/index - Copy.html
@@ -336,9 +336,9 @@ async function generatePDF() {
     function shuffleWord(word) {
         const shuffled = word.split('').sort(() => 0.5 - Math.random()).join('');
         return shuffled !== word ? shuffled : shuffleWord(word);
-    }
+    }   
 
-    function readText(text) {
+function readText(text) {
     const synth = window.speechSynthesis;
     synth.cancel(); // Cancela qualquer síntese de voz anterior
 
@@ -353,8 +353,8 @@ async function generatePDF() {
                     selectedVoice = updatedVoices.find(voice => voice.lang === "en-US");
 
                     if (!selectedVoice && !alertDisplayed) {
-                        alert("No 'en-US' voice found. Using default voice instead.");
-                        alertDisplayed = true;
+                        alertDisplayed = true; // Marca que o alerta foi exibido
+                        alert("No 'en-US' voice found. Using the default available voice.");
                     }
 
                     const utterance = new SpeechSynthesisUtterance(text);
@@ -363,8 +363,8 @@ async function generatePDF() {
                 };
                 return;
             } else if (!alertDisplayed) {
-                alert("No 'en-US' voice found. Using default voice instead.");
-                alertDisplayed = true;
+                alertDisplayed = true; // Marca que o alerta foi exibido
+                alert("No 'en-US' voice found. Using the default available voice.");
             }
         }
     }
@@ -373,24 +373,21 @@ async function generatePDF() {
     utterance.voice = selectedVoice || synth.getVoices()[0]; // Fallback para a primeira voz disponível
     synth.speak(utterance);
 }
-   
+
 function initializeVoices() {
     const synth = window.speechSynthesis;
     const voices = synth.getVoices();
 
-    console.log("Vozes disponíveis no navegador:", voices);
+    console.log("Available voices:", voices);
 
     selectedVoice = voices.find(voice => voice.lang === "en-US");
     
-    if (!selectedVoice) {
-        if (!alertDisplayed) {
-            alert("Nenhuma voz 'en-US' encontrada. Usando a primeira voz disponível.");
-            alertDisplayed = true;
-        }
+    if (!selectedVoice && !alertDisplayed) {
+        alertDisplayed = true; // Garante que o alerta seja exibido apenas uma vez
+        alert("No 'en-US' voice found. Using the first available voice.");
         selectedVoice = voices[0]; // Fallback para a primeira voz
     }
 
-    // Loga qual voz foi selecionada (en-US ou fallback)
     console.log("Selected voice:", selectedVoice ? selectedVoice.name : "Default voice");
 }
 
