--- a/Atividades/MemoryGame2/index.html
+++ b/Atividades/MemoryGame2/index.html
@@ -442,27 +442,25 @@ function getParamsFromURL() {
             });
         }
 
-       function updateNextPhase(userId) {
+       async function updateNextPhase(userId) {
+    console.log("Updating next phase...");
     const currentPhase = getPhaseFromURL();
     const { level, unit } = getParamsFromURL();
     const dbRef = firebase.database().ref(`usuarios/${userId}/progresso/${level}/${unit}`);
-
-    console.log("Updating next phase...");
-    console.log(`Current Level: ${level}, Unit: ${unit}, Phase: ${currentPhase}`);
 
     try {
         if (currentPhase === "last") {
             const nextUnit = `Unit${parseInt(unit.replace('Unit', '')) + 1}`;
             console.log(`Unlocking next unit: ${nextUnit}`);
-            firebase.database().ref(`usuarios/${userId}/progresso/${level}/${nextUnit}`).set({ fase1: true });
+            await firebase.database().ref(`usuarios/${userId}/progresso/${level}/${nextUnit}`).set({ fase1: true });
         } else if (currentPhase === "end") {
             const nextLevel = `Level${parseInt(level.replace('Level', '')) + 1}`;
             console.log(`Unlocking next level: ${nextLevel}`);
-            firebase.database().ref(`usuarios/${userId}/progresso/${nextLevel}/Unit1`).set({ fase1: true });
+            await firebase.database().ref(`usuarios/${userId}/progresso/${nextLevel}/Unit1`).set({ fase1: true });
         } else {
             const nextPhase = parseInt(currentPhase) + 1;
             console.log(`Unlocking next phase: fase${nextPhase}`);
-            dbRef.update({ [`fase${currentPhase}`]: true, [`fase${nextPhase}`]: true });
+            await dbRef.update({ [`fase${currentPhase}`]: true, [`fase${nextPhase}`]: true });
         }
         console.log("Update successful.");
     } catch (error) {
