--- a/Atividades/Missing Word/index.html
+++ b/Atividades/Missing Word/index.html
@@ -302,18 +302,43 @@
 
     async function loadActivities() {
         try {
-            const response = await fetch('../data1/words.txt');
+            const { level, unit } = getLevelAndUnitFromURL();
+
+            // Caminho dinâmico baseado no level e unit
+            const wordsPath = `../../${level}/${unit}/data1/words.txt`;
+            const response = await fetch(wordsPath);
             const text = await response.text();
             const words = text.trim().split('\n');
 
             words.forEach((word, index) => {
                 const imageName = `imagem${index + 1}.png`;
-                const imageUrl = `../data1/imagens/${imageName}`;
-                
+                const imageUrl = `../../${level}/${unit}/data1/imagens/${imageName}`;
                 createActivity(imageUrl, word);
             });
         } catch (error) {
-            console.error('Erro ao carregar palavras:', error);
+            console.error('Erro ao carregar palavras ou imagens:', error);
+        }
+    }
+
+    async function updateNextPhase(userId) {
+        console.log("Atualizando a próxima fase...");
+        const currentPhase = getPhaseFromURL();
+        const { level, unit } = getLevelAndUnitFromURL();
+        const dbRef = firebase.database().ref(`usuarios/${userId}/progresso/${level}/${unit}`);
+
+        try {
+            if (currentPhase === "last") {
+                const nextUnit = `Unit${parseInt(unit.replace('Unit', '')) + 1}`;
+                await firebase.database().ref(`usuarios/${userId}/progresso/${level}/${nextUnit}`).set({ fase1: true });
+            } else if (currentPhase === "end") {
+                const nextLevel = `Level${parseInt(level.replace('Level', '')) + 1}`;
+                await firebase.database().ref(`usuarios/${userId}/progresso/${nextLevel}/Unit1`).set({ fase1: true });
+            } else {
+                const nextPhase = parseInt(currentPhase) + 1;
+                await dbRef.update({ [`fase${currentPhase}`]: true, [`fase${nextPhase}`]: true });
+            }
+        } catch (error) {
+            console.error("Erro ao atualizar o progresso da fase:", error);
         }
     }
 
@@ -438,15 +463,17 @@
         });
     }
 
-    function getPhaseFromURL() {
+function getPhaseFromURL() {
         const params = new URLSearchParams(window.location.search);
         return params.get('fase');
     }
 
-    function getLevelAndUnitFromURL() {
-        const url = window.location.pathname;
-        const parts = url.split('/');
-        return { level: parts[1], unit: parts[2] };
+   function getLevelAndUnitFromURL() {
+        const params = new URLSearchParams(window.location.search);
+        return {
+            level: params.get('level'),
+            unit: params.get('unit'),
+        };
     }
 
     document.addEventListener('DOMContentLoaded', loadActivities);
