--- a/Atividades/WordSearch/index.html
+++ b/Atividades/WordSearch/index.html
@@ -151,7 +151,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 </head>
 <body>
-    <button onclick="history.back()" id="back-button">Back</button>
+    <button id="back-button">Back</button>
 
     <h1>Hannah Word Search Game</h1>
     <button id="reset-button">Restart Game</button>
