--- a/Atividades/Missing Word2/index.html
+++ b/Atividades/Missing Word2/index.html
@@ -156,7 +156,7 @@
    </style>
 </head>
 <body>
-<button onclick="history.back()" style="padding: 15px 25px; background-color: black; color: white; border: none; border-radius: 10px; font-size: 1.5rem; cursor: pointer; transition: background-color 0.3s ease;">
+<button id="backButton" style="padding: 15px 25px; background-color: black; color: white; border: none; border-radius: 10px; font-size: 1.5rem; cursor: pointer; transition: background-color 0.3s ease;">
     Back
 </button>
 <button id="pdfButton" onclick="generatePDF()" style="display: none; padding: 15px 25px; background-color: #32CD32; color: white; border: none; border-radius: 10px; font-size: 1.5rem; cursor: pointer; transition: background-color 0.3s ease; margin-top: 10px;">
@@ -292,106 +292,164 @@
 
     let activities = [];
     let completedWords = 0; // Contador de palavras concluídas
+    let alertDisplayed = false;
 
     function speakText(text) {
-        const synth = window.speechSynthesis;
-        const utterThis = new SpeechSynthesisUtterance(text);
-        utterThis.lang = 'en-US';
-        synth.speak(utterThis);
+    const synth = window.speechSynthesis;
+    synth.cancel(); // Cancela qualquer síntese de voz anterior
+
+    // Função para encontrar a voz "en-US"
+    function getEnglishVoice() {
+        const voices = synth.getVoices();
+        return voices.find(voice => voice.lang === "en-US");
     }
+
+    const englishVoice = getEnglishVoice();
+
+    if (!englishVoice) {
+        if (!alertDisplayed) {
+            if (synth.getVoices().length === 0) {
+                alert("No voices available in your speech synthesizer. Please enable English language in your browser's settings.");
+            } else {
+                alert("No 'en-US' voice found. Using the default voice instead.");
+            }
+            alertDisplayed = true;
+        }
+
+        if (!synth.onvoiceschanged) {
+            synth.onvoiceschanged = () => {
+                const newEnglishVoice = getEnglishVoice();
+                if (newEnglishVoice) {
+                    speakWithVoice(newEnglishVoice, text);
+                }
+            };
+        }
+
+        speakWithVoice(null, text); // Usa a voz padrão, se disponível
+    } else {
+        speakWithVoice(englishVoice, text);
+    }
+}
+
+function speakWithVoice(voice, text) {
+    const synth = window.speechSynthesis;
+    const utterance = new SpeechSynthesisUtterance(text);
+    utterance.lang = "en-US";
+    if (voice) {
+        utterance.voice = voice;
+    }
+    synth.speak(utterance);
+}
 
     async function loadActivities() {
         try {
-            const response = await fetch('../data2/words.txt');
+            const { level, unit } = getLevelAndUnitFromURL();
+
+            // Caminho dinâmico baseado no level e unit
+            const wordsPath = `../../${level}/${unit}/data2/words.txt`;
+            const response = await fetch(wordsPath);
             const text = await response.text();
             const words = text.trim().split('\n');
 
             words.forEach((word, index) => {
                 const imageName = `imagem${index + 1}.png`;
-                const imageUrl = `../data2/imagens/${imageName}`;
-                
+                const imageUrl = `../../${level}/${unit}/data2/imagens/${imageName}`;
                 createActivity(imageUrl, word);
             });
         } catch (error) {
-            console.error('Erro ao carregar palavras:', error);
+            console.error('Erro ao carregar palavras ou imagens:', error);
         }
     }
 
-    function createActivity(imageUrl, word) {
-        const activityContainer = document.getElementById('activity-container');
-        const activityDiv = document.createElement('div');
-        activityDiv.classList.add('activity');
+    async function updateNextPhase(userId) {
+        console.log("Atualizando a próxima fase...");
+        const currentPhase = getPhaseFromURL();
+        const { level, unit } = getLevelAndUnitFromURL();
+        const dbRef = firebase.database().ref(`usuarios/${userId}/progresso/${level}/${unit}`);
 
-        const imgElement = document.createElement('img');
-        imgElement.src = imageUrl;
-        imgElement.onerror = function() {
-            console.error(`Erro ao carregar a imagem: ${imageUrl}`);
-        };
-        activityDiv.appendChild(imgElement);
+        try {
+            if (currentPhase === "last") {
+                const nextUnit = `Unit${parseInt(unit.replace('Unit', '')) + 1}`;
+                await firebase.database().ref(`usuarios/${userId}/progresso/${level}/${nextUnit}`).set({ fase1: true });
+            } else if (currentPhase === "end") {
+                const nextLevel = `Level${parseInt(level.replace('Level', '')) + 1}`;
+                await firebase.database().ref(`usuarios/${userId}/progresso/${nextLevel}/Unit1`).set({ fase1: true });
+            } else {
+                const nextPhase = parseInt(currentPhase) + 1;
+                await dbRef.update({ [`fase${currentPhase}`]: true, [`fase${nextPhase}`]: true });
+            }
+        } catch (error) {
+            console.error("Erro ao atualizar o progresso da fase:", error);
+        }
+    }
 
-        const wordContainer = document.createElement('div');
-        wordContainer.classList.add('word-container');
+ function createActivity(imageUrl, word) {
+    const activityContainer = document.getElementById('activity-container');
+    const activityDiv = document.createElement('div');
+    activityDiv.classList.add('activity');
 
-        const missingWordElement = document.createElement('div');
-        missingWordElement.classList.add('missing-word');
+    const imgElement = document.createElement('img');
+    imgElement.src = imageUrl;
+    imgElement.onerror = function () {
+        console.error(`Erro ao carregar a imagem: ${imageUrl}`);
+    };
+    activityDiv.appendChild(imgElement);
 
-        const letterInputs = [];
-        word.split('').forEach((letter, index) => {
-            const letterInput = document.createElement('input');
-            letterInput.classList.add('missing-letter-input');
-            letterInput.maxLength = 1;
+    const wordContainer = document.createElement('div');
+    wordContainer.classList.add('word-container');
 
-            letterInput.addEventListener('input', function() {
-                if (letterInput.value.toUpperCase() === letter.toUpperCase()) {
-                    letterInput.classList.add('correct');
-                    letterInput.classList.remove('incorrect');
+    const missingWordElement = document.createElement('div');
+    missingWordElement.classList.add('missing-word');
 
-                    if (index < word.length - 1) {
-                        letterInputs[index + 1].focus(); 
-                    }
+    const letterInputs = [];
 
-                    const animationElement = document.createElement('div');
-                    animationElement.classList.add('letter-animation');
-                    animationElement.innerText = letter.toUpperCase();
-                    activityDiv.appendChild(animationElement);
-                    animationElement.style.display = 'block';
+    // Cria caixas de entrada para cada letra
+    word.split('').forEach((letter, index) => {
+        const letterInput = document.createElement('input');
+        letterInput.classList.add('missing-letter-input');
+        letterInput.maxLength = 1;
 
-                    setTimeout(() => {
-                        animationElement.style.display = 'none';
-                        animationElement.remove();
-                    }, 1000);
+        letterInput.addEventListener('input', function () {
+            if (letterInput.value.toUpperCase() === letter.toUpperCase()) {
+                letterInput.classList.add('correct');
+                letterInput.classList.remove('incorrect');
 
-                    const userWord = letterInputs.map(input => input.value.toUpperCase()).join('');
-                    if (userWord === word.toUpperCase()) {
-                        speakText(word);
-                        completedWords++;
-
-                        if (completedWords === activities.length) {
-                            showCompletionModal();
-                        }
-                    } else {
-                        speakText(letter);
-                    }
-                } else {
-                    letterInput.classList.add('incorrect');
-                    letterInput.classList.remove('correct');
+                if (index < word.length - 1) {
+                    letterInputs[index + 1].focus(); // Move para o próximo input
                 }
-            });
 
-            letterInputs.push(letterInput);
-            missingWordElement.appendChild(letterInput);
+                const userWord = letterInputs.map(input => input.value.toUpperCase()).join('');
+                if (userWord === word.toUpperCase()) {
+                    speakText(word);
+                    completedWords++;
+
+                    if (completedWords === activities.length) {
+                        showCompletionModal();
+                    }
+                }
+            } else {
+                letterInput.classList.add('incorrect');
+                letterInput.classList.remove('correct');
+            }
         });
 
-        wordContainer.appendChild(missingWordElement);
-        activityDiv.appendChild(wordContainer);
-        activityContainer.appendChild(activityDiv);
-        activities.push(word);
-        const fullWordElement = document.createElement('div');
-        fullWordElement.innerText = word.toUpperCase();
-        fullWordElement.style.fontWeight = 'bold';
-        fullWordElement.style.marginTop = '10px';
-        wordContainer.appendChild(fullWordElement);
-    }
+        letterInputs.push(letterInput);
+        missingWordElement.appendChild(letterInput);
+    });
+
+    wordContainer.appendChild(missingWordElement);
+    activityDiv.appendChild(wordContainer);
+    activityContainer.appendChild(activityDiv);
+    activities.push(word);
+
+    // Adiciona o texto abaixo com a substituição da primeira letra por ___
+    const fullWordElement = document.createElement('div');
+    const wordWithPlaceholder = `___${word.slice(1).toUpperCase()}`;
+    fullWordElement.innerText = wordWithPlaceholder;
+    fullWordElement.style.fontWeight = 'bold';
+    fullWordElement.style.marginTop = '10px';
+    wordContainer.appendChild(fullWordElement);
+}
 
     function showCompletionModal() {
         updateProgressInDatabase();
@@ -438,18 +496,56 @@
         });
     }
 
-    function getPhaseFromURL() {
+function getPhaseFromURL() {
         const params = new URLSearchParams(window.location.search);
         return params.get('fase');
     }
 
-    function getLevelAndUnitFromURL() {
-        const url = window.location.pathname;
-        const parts = url.split('/');
-        return { level: parts[1], unit: parts[2] };
+   function getLevelAndUnitFromURL() {
+        const params = new URLSearchParams(window.location.search);
+        return {
+            level: params.get('level'),
+            unit: params.get('unit'),
+        };
     }
 
     document.addEventListener('DOMContentLoaded', loadActivities);
+document.getElementById("backButton").addEventListener("click", async () => {
+    const { level, unit } = getLevelAndUnitFromURL();
+    const currentPhase = parseInt(getPhaseFromURL());
+    const nextPhase = `fase${currentPhase + 1}`;
+
+    try {
+        // Verifica se o usuário está autenticado
+        const user = firebase.auth().currentUser;
+        if (!user) {
+            console.error("Usuário não autenticado.");
+            history.back(); // Permite a navegação mesmo sem autenticação
+            return;
+        }
+
+        const userId = user.uid;
+        const dbRef = firebase.database().ref(`usuarios/${userId}/progresso/${level}/${unit}/${nextPhase}`);
+
+        const snapshot = await dbRef.once("value");
+        if (snapshot.exists() && snapshot.val() === true) {
+            // Próxima fase está desbloqueada
+            history.back();
+        } else {
+            // Exibe a mensagem de confirmação
+            const confirmNavigation = confirm("The next phase is locked. Do you still want to navigate back?");
+            if (confirmNavigation) {
+                history.back();
+            }
+        }
+    } catch (error) {
+        console.error("Erro ao verificar o progresso da fase:", error);
+        const confirmNavigation = confirm("Unable to verify the next phase status. Do you still want to navigate back?");
+        if (confirmNavigation) {
+            history.back();
+        }
+    }
+});
 </script>
 
 </body>
